# koc-finder

./: .gitignore  CREDITS.md  README.md  pyproject.toml
examples/: feishu_import.py  v1_fixture.json  v1_persona_spec.yaml
koc_finder/: __init__.py  cli.py  pipeline.py
skill/: SKILL.md
skill/examples/: v1_persona_spec.yaml
skill/references/: scoring_rubric.md
